Correction overflow noms des amis dans lobby

--- a/client/ui/css/mainStyles.css
+++ b/client/ui/css/mainStyles.css
@@ -525,7 +525,7 @@ input {
   margin-left: 10px;
   font-size: 13px;
   overflow: hidden;
-  overflow-wrap: unset;
+  overflow-wrap: normal;
 }
 
 .lobby-ui-container .container:first-child .box.friendlist .friend-entry .friend-action, .lobby-ui-container .container:first-child .box.friendlist .group-entry .friend-action, .lobby-ui-container .container:first-child .box.grouplist .friend-entry .friend-action, .lobby-ui-container .container:first-child .box.grouplist .group-entry .friend-action {
