--- a/client/ui/scss/_lobby.scss
+++ b/client/ui/scss/_lobby.scss
@@ -139,7 +139,7 @@
             margin-left: 10px;
             font-size: 13px;
             overflow: hidden;
-            overflow-wrap: unset;
+            overflow-wrap: normal;
           }
 
           .friend-action {
